[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "vdbfusion"
version = "0.0.1"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.10"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
testpaths = ['tests']
