[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "vdbfusion"
version = "0.0.1"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.28"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

[tool.cibuildwheel]
# https://www.openvdb.org/documentation/doxygen/dependencies.html
# openvdb minimum python version is 3.9
skip = ["*-musllinux*",  "pp*", "cp36-*", "cp37-*", "cp38-*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.pytest.ini_options]
testpaths = ['tests']
